--- a/plugins/nginx-vhosts/install
+++ b/plugins/nginx-vhosts/install
@@ -29,7 +29,7 @@ server{
 
 server{
   server_name www.$(< "$DOKKU_ROOT/VHOST");
-  rewrite ^(.*) http://$(< "$DOKKU_ROOT/VHOST")$1 permanent;
+  rewrite ^(.*) http://$(< "$DOKKU_ROOT/VHOST")\$1 permanent;
 }
 
 ssl_session_cache shared:SSL:20m;
